cmake_minimum_required (VERSION 2.6)
set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS}-fopenmp -O3")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}-fopenmp -std=c++11 -O3")
project (DynamicIndex)
FIND_PACKAGE(OpenMP REQUIRED)
add_executable(Incremental_Experiments Incremental_Experiments.cpp NNService.cpp IntersectionMatrix.cpp IntersectionMatrix.hpp)
add_executable(Baseline_Experiments Baseline_Experiments.cpp NNService.cpp IntersectionMatrix.cpp IntersectionMatrix.hpp)
TARGET_LINK_LIBRARIES(Incremental_Experiments LINK_PUBLIC ${OpenMP_CXX_FLAGS} ${CMAKE_CXX_FLAGS})
TARGET_LINK_LIBRARIES(Baseline_Experiments LINK_PUBLIC ${OpenMP_CXX_FLAGS} ${CMAKE_CXX_FLAGS})
