cmake_minimum_required (VERSION 2.6)
set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS}-fopenmp -O3")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}-fopenmp -std=c++11 -O3")
project (DynamicIndex)
FIND_PACKAGE(OpenMP REQUIRED)
add_executable(Recommendability_Experiments Recommendability_Experiments.cpp NNService.cpp IntersectionMatrix.cpp IntersectionMatrix.hpp)
TARGET_LINK_LIBRARIES(Recommendability_Experiments LINK_PUBLIC ${OpenMP_CXX_FLAGS} ${CMAKE_CXX_FLAGS})
